tests/sksl/errors/Ossfuzz27614.glsl
### Compilation failed:

error: 1: type mismatch: '-' cannot operate on 'float', 'int'
1 error
